added many endpoints and modify migrations
