# internal/app/apiserver/apiserver.go
@@ -57,6 +57,32 @@ func (s *APIServer) configureEndpoints() {
 		path.GET("/account/info", endpoint.GetUserInfo)
 		path.PUT("/account/info", endpoint.PutUserInfo)
 		path.DELETE("/account/delete", endpoint.DeleteUserInfo)
+
+		path.GET("/tag/:id", endpoint.GetTag)
+		path.POST("/tag", endpoint.PostTag)
+		path.DELETE("/tag/:id", endpoint.DeleteTag)
+
+		path.GET("/servicetype/:id", endpoint.GetServiceType)
+		path.GET("/servicetype", endpoint.GetServiceTypes)
+		path.POST("/servicetype", endpoint.PostServiceType)
+		path.DELETE("/servicetype/:id", endpoint.DeleteServiceType)
+
+		path.GET("/companies/review/:id", endpoint.GetCompanyReviews)
+		path.POST("/companies/review", endpoint.PostCompanyReview)
+		path.DELETE("/companies/review/:id", endpoint.DeleteCompanyReview)
+
+		path.GET("/service/review/:id", endpoint.GetServiceReviews)
+		path.POST("/service/review", endpoint.PostServiceReview)
+		path.DELETE("/service/review/:id", endpoint.DeleteServiceReview)
+
+		// path.GET("/review/:id", endpoint.GetServiceType)
+		// path.GET("/review", endpoint.GetServiceTypes)
+		// path.POST("/review", endpoint.PostServiceType)
+		// path.DELETE("/review/:id", endpoint.DeleteServiceType)
+
+		// path.GET("/reviewtype/:id", endpoint.GetReviewType)
+		// path.POST("/reviewtype", endpoint.PostReviewType)
+		// path.DELETE("/reviewtype/:id", endpoint.DeleteReviewType)
 	}
 
 	s.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
